kubernetes/apps/observability/grafana/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
  annotations:
    glance/internal: "true"
    glance/icon: di:grafana
    glance/description: Dashboards & Metrics
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - "grafana.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: grafana
          port: 80
